www/src/styles/contentBlocks/TwoUpBlock.css
.TwoUpBlock--layout-normal-50-50,
.TwoUpBlock--layout-normal-40-60,
.TwoUpBlock--layout-normal-60-40 {
  display: flex;
  flex-direction: column;

  &.TwoUpBlock--mobileNormal {
    .TwoUpBlock__child:nth-child(2) {
      padding-top: 32px;

      @screen md {
        padding-top: 52px;
      }

      @screen lg {
        padding-top: initial;
      }
    }
  }

  &.TwoUpBlock--mobileReverse {
    flex-direction: column-reverse;

    .TwoUpBlock__child:nth-child(1) {
      padding-top: 32px;

      @screen md {
        padding-top: 52px;
      }

      @screen lg {
        padding-top: initial;
      }
    }
  }

  @screen lg {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    grid-gap: var(--grid-margin-lg);

    .TwoUpBlock__child {
      grid-column: span 6;
    }
  }
}

.TwoUpBlock--layout-normal-40-60 {
  @screen lg {
    .TwoUpBlock__child:nth-child(1) {
      grid-column: span 5;
    }

    .TwoUpBlock__child:nth-child(2) {
      grid-column: span 7;
    }
  }
}

.TwoUpBlock--layout-normal-60-40 {
  @screen lg {
    .TwoUpBlock__child:nth-child(1) {
      grid-column: span 7;
    }

    .TwoUpBlock__child:nth-child(2) {
      grid-column: span 5;
    }
  }
}

.TwoUpBlock--layout-normal-50-50 {
  .TwoUpBlock__child {
    &--headerContentChildBlock {
      display: flex;
      flex-direction: column;
      justify-content: center;
      align-items: center;
    }
  }
}

.TwoUpBlock--layout-overlap-50-50 {
  display: flex;
  flex-direction: column;
  align-items: center;

  @screen lg {
    flex-direction: row;
    align-items: center;
  }

  &.TwoUpBlock--mobileReverse {
    flex-direction: column-reverse;

    @screen lg {
      flex-direction: row;
    }

    .TwoUpBlock__child:nth-child(1) {
      margin-top: -32px;

      @screen md {
        margin-top: -52px;
      }

      @screen lg {
        margin-top: initial;
      }
    }
  }

  .TwoUpBlock__child {
    max-width: 630px;
    margin: 0 auto;

    @screen lg {
      max-width: initial;
      width: calc(50% + 3rem);
    }

    &:nth-child(2) {
      margin-top: -24px;
      max-width: calc(630px - 48px);
      width: calc(100% - 24px);
      mix-blend-mode: multiply;

      @screen md {
        margin-top: -48px;
      }

      @screen lg {
        width: calc(50% + 3rem);
        max-width: initial;
        margin-top: 0;
        margin-left: -48px;
      }
    }

    &--imageChildBlock {
      max-width: initial;

      @screen lg {
        width: calc(50% + 3rem);

        img {
          width: 100%;
        }
      }
    }

    &--richTextChildBlock {
      .theme-wrapper > div {
        padding: theme('spacing.16');

        @screen md {
          padding: theme('spacing.24');
          min-height: 100%;
          display: flex;
          flex-direction: column;
          justify-content: center;
          align-items: center;
          min-height: 600px;
        }
      }
    }
  }
}

.TwoUpBlock--tab-content {
  margin-top: theme(spacing.4) !important;
}

